--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^3.0.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^0.2.2"
+    "web-vitals": "^0.2.2",
+    "wouter": "^2.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
