--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^3.0.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^0.2.2",
-    "wouter": "^2.7.4"
+    "wouter": "^2.7.4",
+    "zustand": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
